# assignment

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  entrypoint.sh  main.py  pyproject.toml  temporal.db
app/: __init__.py  activities.py  clients.py  handlers.py  transformer.py  workflows.py
app/sql/: client_version.sql  extract_column.sql  extract_database.sql  extract_index.sql  extract_procedure.sql  extract_quality_metrics.sql  extract_relationship.sql  extract_schema.sql  extract_table.sql  extract_temp_table_regex_column.sql  extract_temp_table_regex_table.sql  extract_view_dependency.sql  filter_metadata.sql  tables_check.sql  test_authentication.sql
components/: deployment-secrets.yaml  eventstore.yaml  objectstore.yaml  secretstore.yaml  statestore.yaml
components-docker/: eventstore.yaml  objectstore.yaml  statestore.yaml
frontend/static/: connector.html  index.html  script.js  styles.css
frontend/templates/: index.html
local/dapr/: statestore.db-shm  statestore.db-wal
local/dapr/eventstore/: 06c35601-3aaf-49b4-a483-d49a87fa2ca6  17cb66bc-72bf-4f4d-87ff-d5ea65bcb62e  2fd348d4-a224-4380-9e53-ee6d38c20c23  33be573f-b7ec-4f9f-850c-e9123cc0d8a1  40c38963-c0ae-4138-bced-2a9ba93d4c1a  4c448193-1641-4fcb-aad1-8d6b158f640d  4f440ad6-9df8-46a1-a586-0bebcae13cd9  5b2d515d-3ca7-471e-b5c6-124cb3309df5  5fccb909-7d70-4beb-8ca5-cfadcccafdb1  632e5d7b-f4f5-4850-8f37-3376acd3f5dc  679903cc-3197-4497-baf9-109e5e0c044c  75a84916-fbb8-4139-a2b5-a498ac76cadf  84f57012-d921-47da-b7ad-ca2baf0b7300  99988468-2794-40a6-9c32-b75b95650edd  a9993fff-d825-4486-96c4-0f45818f3597  af232d88-8075-4b9d-af5d-5b2997418dfe  b97e7582-d9f8-4a76-9cd8-5b8a461b3649  bbc16b90-0615-4e1c-9f90-49fbb119a27e  c5c8e3cc-8f6f-41d9-be25-29a190c7958b  c5e4cb3b-b254-4ea5-9ae8-c1f3c890bfe2  ce800b82-12ba-4e42-b35c-f794cfb8c445  cf78d105-1608-45f7-b357-90e95b9555a6  dd81ddca-6af1-46f5-8da0-e42054a8b9b6  def15915-3ecb-4885-9bf6-f0e7ea3d68cf  df34570f-a73e-4b5c-9690-2403b0f33d50  e1386a7e-a96b-43a3-872b-ee0de4b6376f  e55c6b99-2f73-4a38-b469-fffe244ddb16  e8f7b143-30bd-495b-84c0-e9fde5a6778b  ed7edc24-6d2a-4256-b668-14aafbddc104  f7361dfd-a43f-477a-9609-ce80d14d092d  fdd8dede-f7ea-4b1d-b88f-d21a0b97c492
local/dapr/objectstore/artifacts/apps/postgres/workflows/cbd3c608-2094-4ce5-8700-b3b5652d4ced/01993c46-e981-7d94-9167-e1d802903661/raw/column/: statistics.json.ignore
local/dapr/objectstore/artifacts/apps/postgres/workflows/cbd3c608-2094-4ce5-8700-b3b5652d4ced/01993c46-e981-7d94-9167-e1d802903661/raw/database/: chunk-0-part1.parquet
local/tmp/persistent-artifacts/apps/postgres/credentials/9420a020-283e-4291-b8b3-79bcc8b83bc4/: config.json
local/tmp/persistent-artifacts/apps/postgres/workflows/cbd3c608-2094-4ce5-8700-b3b5652d4ced/: config.json
seeds/: bootstrap.sql
(+5 files in other folders)
